fix: add DATABASE_URL

--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.15",
+    "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^7.1.5",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.4",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "uploadthing": "^7.4.4",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -36,6 +42,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "drizzle-kit": "^0.30.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8.4.39",
@@ -43,6 +50,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
+    "tsx": "^4.19.2",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
