--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@uploadthing/react": "^7.1.5",
     "@vercel/postgres": "^0.10.0",
+    "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.4",
     "geist": "^1.3.0",
